--- a/index.html
+++ b/index.html
@@ -757,6 +757,6 @@ Copyright &copy; 2019 - 2020, “VOLT-SERVICE”
      
 <script  src="js/slick.min.js"></script>
 <script  src="js/app.js"></script>
-<script  src="js/jquery.maskedinput-master/dist/jquery.maskedinput.js"></script>
+<!--<script  src="js/jquery.maskedinput-master/dist/jquery.maskedinput.js"></script>-->
 </body>
 </html>
