changed the color from yellow to blue

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ text-align: center;
                     <h1 class="marketing__subtitle">Есть проблемы с электрикой в квартире?</h1>
                 </div>
                 <div class="marketing__item">
-                    <a href="https://api.whatsapp.com/send?phone=79069966201" class="btn btn--yellow" type="button">Вызвать мастера</a>
+                    <a href="https://api.whatsapp.com/send?phone=79069966201" class="btn btn--yellow" >Вызвать мастера</a>
                 </div>
             </div>
         </div>
